Fixed fontawesome icon appearing large on load

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -10,7 +10,7 @@
   transition: 0.5s;
 }
 
-.navbar > li:hover {
+.navbar > li:hover, .navbar > li > .dropdown > ul > li:hover {
   text-decoration: underline;
 }
 
