--- a/src/templates/release.css
+++ b/src/templates/release.css
@@ -19,10 +19,8 @@
 
 .releaseImg {
   grid-area: releaseImg;
-}
-
-.releaseImg > img {
-  max-width: 85%;
+  width: 85%;
+  margin: auto;
 }
 
 .releaseInfo {
